fix livestream video height on mobile

--- a/asset/main.scss
+++ b/asset/main.scss
@@ -156,11 +156,8 @@ body,
 }
 
 #livestream {
-    // background-color: $main-color-one;
     background: url(../asset/images/livestream-bg.jpg);
     > .container-fluid {
-        // padding-top: 25px;
-        // padding-bottom: 25px;
         @media (max-width: 768px) {
             padding-left: 0;
             padding-right: 0;
@@ -197,7 +194,6 @@ body,
         }
         iframe {
             width: 100%;
-            height: 400px;
             @media (min-width: 320px) and (max-width: 500) {
                 height: 200px;
             }
